--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,1 +1,34 @@
-<p>navigation works!</p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-12">
+            <nav class="nav">
+                <div class="container" id="nav1">
+                    <div class="logo col-md-2 col-4">
+                        <a href="#"><img src="../../assets/static/LOGO.png" class="img-fluid" id="logo" alt="" srcset=""></a>
+                    </div>
+                    <div class="row justify-content-end">
+                        <div id="mainListDiv" class="main_list col-md-2 col-6">
+                            <ul class="navlinks ">
+                                <li>
+                                    <a href="https://twitter.com/"><img src="../../assets/static/twitter.png" class="img-fluid" id="search" alt="" srcset=""> </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.facebook.com/"><img src="../../assets/static/facebook.png" class="img-fluid" id="search" alt="" srcset=""></a>
+                                </li>
+
+                                <li>
+                                    <a href="https://www.youtube.com/"><img src="../../assets/static/youtube.png" class="img-fluid" id="search" alt="" srcset=""></a>
+                                </li>
+
+
+                            </ul>
+                        </div>
+                    </div>
+
+                </div>
+            </nav>
+
+        </div>
+    </div>
+
+</div>
